src/objects/Unit_Lot_Information__c.object
<CustomObject>
    <fields>
        <fullName>Deposit_Apartment__c</fullName>
        <label>Deposit Apartment</label>
        <summaryFilterItems>
            <field>Buyer_Information__c.Status__c</field>
            <operation>equals</operation>
            <value>Deposit Received</value>
        </summaryFilterItems>
        <summaryForeignKey>Buyer_Information__c.Unit_Lot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Exchanged_Apartment__c</fullName>
        <label>Exchanged Apartment</label>
        <summaryFilterItems>
            <field>Buyer_Information__c.Status__c</field>
            <operation>equals</operation>
            <value>Exchanged</value>
        </summaryFilterItems>
        <summaryForeignKey>Buyer_Information__c.Unit_Lot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Units__c</fullName>
        <label>No of Units</label>
        <summaryForeignKey>Buyer_Information__c.Unit_Lot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Unit/Lot Information</relationshipLabel>
        <relationshipName>Unit_Lot_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Apartments__c</fullName>
        <label>Remaining Apartments</label>
        <summaryFilterItems>
            <field>Buyer_Information__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryForeignKey>Buyer_Information__c.Unit_Lot__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unit_Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit/Lot</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Unit/Lot Information</relationshipLabel>
        <relationshipName>Unit_Lot_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Unit/Lot Information</label>
    <nameField>
        <displayFormat>UL-{000000}</displayFormat>
        <label>Unit/Lot Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit/Lot Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>